@@ -6,6 +6,6 @@ DIST gitlab.gnome.org--GNOME_glib--2.63.0.tar.bz2 5632519 BLAKE2B 4b01e933794fb7
 DIST glib-2.65.0.tar.xz 4797160 BLAKE2B 6ef84afc192440a7fed3abe2a6ae62e7cb460af36e632861a04e35aeed6bca188b544fcb6bd831cd9ffe4cb3a366d31f2ba4e34a3df5cdba0c8008f079da6a8b SHA512 0bad09a41c7860d31522729e18a20d208de60935b081407cc9307cfc865b58e751ed3978b864081d4b59744c584d37e77cf0b055e9daae91cb73b4b93a6d9ee1
 EBUILD glib-2.60.7.ebuild 6188 BLAKE2B 6d0b25582d67c5311195ef686a7f353841683bf080700f093052ec48ba7101f181b4150bb757898f1fb9ab8402be500cf05a18ac91817d54f2110f13e503935d SHA512 e862fc564635320bddaed2fd0d5eece07c0be4981c7fcf07b157d3e489e64dc1e95e795df78a05b7f480bfd7e68262086e5c75542f9e9e684d28697816298509
 EBUILD glib-2.63.0.ebuild 6080 BLAKE2B 8b17d49c48a0c3d33499b50d051643ab8159c4086b10e26b7ee5de5658b2ff9f4e314582d2b8d75a33ea76372351ad57772fd92aee783e7ccd10e8a2f01911a1 SHA512 f4767527f977ae274e645ccf23ff8413ea597b03bb92cbc5a1fc2683341372cd65ff3321c095aa70057463b1a9bf4bf8d24836f4e6384896b8b7014153402a9d
-EBUILD glib-2.65.0.ebuild 11207 BLAKE2B 40d09d39386148b7a6ccc8d515f4581b1dc2dc30bac2b82501f12fdccf3487c3c13cbd9c7269c1d9d88da1b528cf73db291f8ee4fc53d498919e48277a87fb85 SHA512 2904d0202eebba83eefd75c52a7c751c68b54e98cd99f28632a091571043b6e4c95a0852f37ea13cac88a853602e2b03502f50b8204d76ea29c336a204125c10
-MISC ChangeLog 246 BLAKE2B 235b0656f8bab6f13be62a59ac8cc7ae1e3f8fcc9d4b26a0fa6eff9d290de7da90ca5141d2b87d20731d6a09bc0d2632bb2a251ab67014cd96f61b95a70e593e SHA512 4228eec813a46847fc9702ba755730c562a3fba9b0b6919c235f4832188ae3abf997bd0b7574b3edc7db4b8803a24b928185d25949d1b36cbbd0b4e907e52e11
-MISC metadata.xml 1135 BLAKE2B 998c76a30e16a9e394cffebc4260fa8742854fa5dce46010969346458c610d835e6c73749db89207a4a037611bda2b90ccb1edccf15b1abced356999841dd46b SHA512 3f65062d457a61fd1582c995de561e4fb362d5fcb7cf8801802b55c2c69230e261382fdc444a4efddff140cda5a1e76f8f6fffdfb80df98bda2e6a2aafcf27ee
+EBUILD glib-2.65.0.ebuild 11209 BLAKE2B 454670b802d1ae338680debe92e692b4c4ae97e7c6219d97a7e815381c0dd50ab67439ab60b00778facd22c137724ee8f4f9d6e9f0c23eca3334597d7cb16077 SHA512 fe73e2c0204c66d9174d09732986c56c28d3451879b16906d6d1b9a767bcad13d059b92fdd90d14e55ddd3507c3135400831cf8305927d37ec3376b141fd2105
+MISC ChangeLog 388 BLAKE2B efbfff62cc196e316b6c883240ed5423faf396c940462324ced49562c2bb9f7903d26778f0802baa007a053a14fd89ef54a209c125f32cf2f28a029e63ec6a20 SHA512 eab7a4fa14c2a766b1e751ec712be4eb025d4a786e042b3b38444f7bb0df5d7229333421662b41ec91d6a25efca31826327a030e0af68216106eaf5964575bf4
+MISC metadata.xml 1299 BLAKE2B 48f9d17af459e89b9abbf9205f6ab0f32146332b1d103fa9077bc14c93fd0dee944306ba7bc7c80f609de96b01afaf7937a32eabaa559ff969226be1efa10aaa SHA512 cd81d36eb82a10391b454d7f60943f6e378dec93480cbf66c02aabea246febc4d10f3273e0aa0303d193f2eb9d194e10cc9d92c818dba2fdbf2a2c5ed3f1bba1
